examples/kuard-nodeselector.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kuard-pod-nvidia
  labels:
    environment: prod
    app: kuard
spec:
  containers:
    - image: gcr.io/kuar-demo/kuard-amd64:1
      name: kuard
      ports:
        - containerPort: 8080
          name: http
          protocol: TCP
  nodeSelector:
    gpu: nvidia
---
apiVersion: v1
kind: Pod
metadata:
  name: kuard-pod-amd
  labels:
    environment: pre
    app: kuard
spec:
  containers:
    - image: gcr.io/kuar-demo/kuard-amd64:1
      name: kuard
      ports:
        - containerPort: 8080
          name: http
          protocol: TCP
  nodeSelector:
    gpu: amd
