examples/kuard-pod-labels.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kuard-prod
  labels:
    environment: prod
    app: kuard
spec:
  containers:
    - image: gcr.io/kuar-demo/kuard-amd64:1
      name: kuard
      ports:
        - containerPort: 8080
          name: http
          protocol: TCP
---
apiVersion: v1
kind: Pod
metadata:
  name: kuard-pre
  labels:
    environment: pre
    app: kuard
spec:
  containers:
    - image: gcr.io/kuar-demo/kuard-amd64:1
      name: kuard
      ports:
        - containerPort: 8080
          name: http
          protocol: TCP
---
apiVersion: v1
kind: Pod
metadata:
  name: kuard-test
  labels:
    environment: test
    app: kuard
spec:
  containers:
    - image: gcr.io/kuar-demo/kuard-amd64:1
      name: kuard
      ports:
        - containerPort: 8080
          name: http
          protocol: TCP
