examples/kuard-lb-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: kuard-lb-service
spec:
  selector:
    app: kuard
  ports:
    - protocol: TCP
      targetPort: 8080
      port: 8080
  type: LoadBalancer
