examples/kuard-service-clusterip.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kuard-pod-published
  labels:
    app: public
spec:
  containers:
    - image: gcr.io/kuar-demo/kuard-amd64:1
      name: kuard
      ports:
        - containerPort: 8080
          name: http
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: clusterip-service
  labels:
    app: public
spec:
  selector:
    app: public
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
