examples/host-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: host-ingress
spec:
  defaultBackend:
    service:
      name: be-default
      port:
        number: 8080
  rules:
  - host: alpaca.kube.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: alpaca
            port:
              number: 8080
  - host: bandicoot.kube.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: bandicoot 
            port:
              number: 8080
